--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -1,6 +1,12 @@
 .btn {
     display: inline-block;
     width: 80px;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: darkgray;
+    color: white;
+    margin: 5px;
 }
 
 .btn:active {
@@ -9,5 +15,4 @@
 
 .active {
     background-color: green;
-    color: white;
 }
