--- a/src/Components/Todolist/TodolistFilters/TodolistFilters.module.css
+++ b/src/Components/Todolist/TodolistFilters/TodolistFilters.module.css
@@ -2,8 +2,11 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 2px solid black;
+    -webkit-box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
+    box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
     margin: 20px;
     padding: 10px;
     border-radius: 5px;
+    background-color: white;
 }
