--- a/src/Components/Todolist/TodolistTitle/TodolistTitle.module.css
+++ b/src/Components/Todolist/TodolistTitle/TodolistTitle.module.css
@@ -1,9 +1,12 @@
 .wrapper {
-    border: 2px solid black;
+    -webkit-box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
+    box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin: 20px;
     padding: 10px;
     border-radius: 5px;
+    background-color: white;
 }
