--- a/src/Components/Todolist/Todolist.module.css
+++ b/src/Components/Todolist/Todolist.module.css
@@ -2,10 +2,10 @@
     /*border:2px solid black;*/
     background-color: #eae9e9;
     border-radius: 20px;
-    width: 500px;
-    margin: 20px auto;
+    width: 400px;
+    margin: 20px;
     padding: 20px;
-    -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
-    -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
-    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
+    -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
+    -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
+    box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
 }
